--- a/GettingStarted.csproj
+++ b/GettingStarted.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -12,10 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="HotChocolate.AspNetCore" Version="15.1.4" />
-    <PackageReference Include="HotChocolate.AspNetCore.CommandLine" Version="15.1.4" />
-	  <PackageReference Include="HotChocolate.Subscriptions.Redis" Version="15.1.4"/>
-	  <PackageReference Include="HotChocolate.Types.Analyzers" Version="15.1.4">
+    <PackageReference Include="HotChocolate.AspNetCore" Version="15.1.5" />
+    <PackageReference Include="HotChocolate.AspNetCore.CommandLine" Version="15.1.5" />
+	  <PackageReference Include="HotChocolate.Subscriptions.Redis" Version="15.1.5" />
+	  <PackageReference Include="HotChocolate.Types.Analyzers" Version="15.1.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
